# Campus-Connect-RAG

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
chatbot/: rag_chatbot.py
chroma_db/: chroma.sqlite3
data/: faculty_data.json
scraper/: __init__.py  faculty_scraper.py
vectorstore/: vector_store.py
